Port recent changes from abstract membership manager